--- a/css/style.css
+++ b/css/style.css
@@ -1,785 +1,1 @@
-html,body{
-  overflow-x: hidden;
-}
-:root {
-  --copper: #FF9839;
-  --basic-text-color: #DCDBDB;
-  --text-dark: #2a2c2c;
-}
-.texttype1 {
-  color: var(--basic-text-color);
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  overflow-x: hidden;
-  background-color: #2a2c2c !important;
-}
-
-.conatiner-fluid {
-  margin: 0%;
-  padding: 0%;
-}
-
-.landing-section {
-  width: 100vw;
-}
-
-.element {
-  height: 100%;
-  width: 100%;
-  overflow-x: hidden;
-
-}
-
-canvas {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-}
-
-.myname {
-  position: relative;
-  display: block;
-  text-align: center;
-  z-index: 1;
-  padding-top: 17%;
-  margin-left: auto;
-  margin-right: auto;
-  height: 100vh;
-  font-family: 'Lato', sans-serif;
-  font-weight: bolder;
-  color: #DCDBDB;
-}
-
-.heading {
-  color: #DCDBDB;
-  font-size: 50px;
-  margin-bottom: 0;
-}
-
-.highlight {
-  color: #FF9839;
-}
-
-.canvasbtn { 
-  border: 1px solid var(--basic-text-color) !important;
-  color: var(--copper) !important;
-}
-
-.canvasbtn:hover {
-
-  background-color: var(--copper) !important;
-  color: var(--text-dark) !important;
-  border: 2px solid var(--basic-text-color) !important;
-  font-weight: 600;
-}
-
-
-.canvasbtn:hover> .fas {
-  display: inline-block !important;
-  transform: rotate(90deg) ;
-  transition: 0.5s;
-}
-
-.arrow {
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-
-/* .about-section {
-    background-color: blueviolet;
-} */
-
-.navbar {
-  padding: 0 !important;
-  z-index: 100;
-  position: sticky !important;
-  top: 0;
-  left: 0;
-}
-
-.nav-body {
-  padding-left: 5% !important;
-  background-color: black;
-}
-
-.navbar-brandd {
-  height: 25px;
-  width: 25px;
-}
-
-a {
-  text-decoration-line: none;
-  font-weight: bolder;
-}
-
-.nav-link {
-  color: rgb(192, 189, 189);
-}
-
-.nav-link:hover {
-  color: var(--copper) !important;
-}
-.navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .show>.nav-link {
-color: #FF9839 !important;
-}
-.nav-btnn {
-  margin-bottom: 0;
-  margin-top: 3px;
-  margin-right: 30px;
-}
-
-.hr {
-  border: 2px solid var(--copper);
-  background-color: var(--copper);
-  margin: 0%;
-  border-bottom: 3px solid var(--copper);
-}
-
-.hr-below-nav {
-
-  width: 100vw;
-  z-index: 99;
-
-}
-
-.content-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  height: 100vh;
-  padding: 8% 2% 2% 2%;
-}
-
-.content-container>.about-content-box {
-  width: 49%;
-  text-align: center;
-}
-
-.about-content-box-description {
-  padding-top: 4%;
-}
-
-.hr-below-about-title {
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.about-me-card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 2%;
-}
-
-.about-me-card-container>.about-me-cards {
-  width: 49%;
-  padding: 10px;
-  border-radius: 10px;
-  border: 1px solid var(--copper);
-}
-
-.about-me-cards-title {
-  font-size: 1.2rem;
-  font-weight: 600;
-}
-
-.my-image {
-  border: 1px solid var(--copper);
-  border-radius: 20px;
-  position: relative;
-  overflow: hidden;
-
-}
-
-.my-image>img {
-  height: 85%;
-  width: 85%;
-  background-size: cover;
-
-}
-
-.my-resume {
-  position: absolute;
-  background-color: rgb(179, 40, 125);
-  width: 100%;
-  height: 50px;
-  border-radius: 0 0 20px 20px;
-  padding-top: 12px;
-  transition: 550ms ease-out;
-}
-
-.my-resume>p {
-  font-weight: 600;
-}
-
-.my-image:hover .my-resume {
-  transform: translateY(-50px);
-  cursor: pointer;
-  transition: 150ms ease-out;
-}
-
-.skill_section {
-  height: 100vh;
-  display: flex;
-  flex-wrap: wrap;
-  padding-top: 7%;
-  background-color: #252627;
-}
-
-.skill-containers {
-  width: 50%;
-  text-align: center;
-}
-
-.comb-container {
-  padding: 5% 0 0 0;
-  margin-top: 0%;
-  position: relative;
-}
-
-
-.hexagon-gallery {
-  margin: auto;
-  /* max-width: 50%; */
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-auto-rows: 200px;
-  grid-gap: 14px;
-  padding-bottom: 50px;
-}
-
-.hex {
-  display: flex;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #424242;
-  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-}
-
-.hex:hover {
-
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.025);
-}
-
-.hex-img {
-  width: 50%;
-  height: 50%;
-  margin: auto;
-}
-
-.hex-img:hover {
-  animation: bounce;
-  animation-duration: 0.5s;
-
-}
-
-.hex:first-child {
-  grid-row-start: 1;
-  grid-column: 3 / span 2;
-}
-
-.hex:nth-child(2) {
-  grid-row-start: 1;
-  grid-column: 5 / span 2;
-}
-
-.hex:nth-child(3) {
-  grid-row-start: 2;
-  grid-column: 2 / span 2;
-}
-
-.hex:nth-child(4) {
-  grid-row-start: 3;
-  grid-column: 3 / span 2;
-}
-
-.hex:nth-child(7) {
-  grid-row-start: 3;
-  grid-column: 5 / span 2;
-}
-
-.hex:nth-child(5) {
-  grid-row-start: 2;
-  grid-column: 4 / span 2;
-}
-
-.hex:nth-child(6) {
-  grid-row-start: 2;
-  grid-column: 6 / span 2;
-}
-
-.graph-container {
-  width: 92%;
-  height: 60%;
-  border-left: 1px solid var(--copper);
-  border-bottom: 1px solid var(--copper);
-  margin-left: auto;
-  margin-top: 10%;
-  display: flex;
-  justify-content: space-evenly;
-  align-items: flex-end;
-}
-
-.graph-container>.bar {
-  height: 250px;
-  width: 50px;
-  background-color: #247a71;
-  justify-content: center;
-  position: relative;
-  display: flex;
-  align-items: flex-end;
-  box-shadow: 5px 5px 10px rgb(20, 20, 20);
-}
-
-.graph-container>.bar>.bar-box>p {
-  display: inline;
-  color: #252627;
-  /* color: #DCDBDB; */
-  font-weight: bolder;
-  font-size: 1.2rem;
-}
-
-.bar-box {
-  transform: rotate(-90deg);
-  margin-bottom: 50px;
-}
-
-.bar:nth-child(1) {
-  height: 90%;
-}
-
-.bar:nth-child(2) {
-  height: 80%;
-}
-
-.bar:nth-child(3) {
-  height: 50%;
-}
-
-.bar:nth-child(4) {
-  height: 80%;
-}
-
-.bar:nth-child(5) {
-  height: 60%;
-}
-
-.bar:nth-child(6) {
-  height: 70%;
-}
-
-.bar:nth-child(7) {
-  height: 40%;
-}
-
-.bar:nth-child(8) {
-  height: 30%;
-}
-
-.fa,
-.fab,
-.fad,
-.fal,
-.far,
-.fas {
-  display: inline !important;
-}
-
-.fa-php {
-  font-weight: 600;
-  font-size: 1.5rem;
-}
-
-.portfolio_section {
-  height: 100vh;
-  padding-top: 5%;
-}
-
-.portfolio_section>h1 {
-  text-align: center;
-  margin-top: 2%;
-}
-
-.portfolio_section>.project-container {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  margin-top: 100px;
-  justify-content: space-evenly;
-}
-
-.portfolio_section>.project-container>.project-card {
-  height: 350px;
-  width: 300px;
-  border: 1px solid var(--copper);
-  border-radius: 20px;
-  box-shadow: 5px 5px 20px rgb(15, 15, 15);
-  transition: 200ms;
-  position: relative;
-}
-.portfolio_section>.project-container>.project-card>img
-{
-  width: 100%;
-  height: 100%;
-  border-radius: 20px;
-  object-fit: contain;
-} 
-.portfolio_section>.project-container>.project-card>.after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: none;
-  color: #FFF;
-  text-align: center;
-  padding-top: 40%;
-}
-.portfolio_section>.project-container>.project-card>.after>a>p
-{
-  display: inline-block;
-  padding: 10px;
-  border-radius: 5px;
-  background-color: #FF9839;
-  border: 2px solid #fff;
-  color: #232424;  
-  text-shadow: 2px 2px 20px #000;
-  font-weight: 700;
-} 
-.portfolio_section>.project-container>.project-card:hover
-{
-  transform: scale(1.1);
-}
-.portfolio_section>.project-container>.project-card:hover .after
-{   
-  transition: 200ms;
-  cursor: pointer;
-  display: block;
-  border-radius: 20px;
-  background: rgba(0, 0, 0, .6);
-}
-
-.Contact_section
-{
-  height: 100vh;
-  padding-top: 5%;
-  background-color: #252627; 
-  display: flex;  
-  justify-content: space-evenly;
-}
-.Contact_section>.contact-container
-{
-  width: 45%;
-  height: 90%;
-  padding-top: 5%;
-  text-align: center;
-  overflow: hidden;
-}
-.contact-quote
-{
-  color: #DCDBDB;
-}
-
-.contact-card
-{
-  height: fit-content;
-  width: 95%;
-  margin: auto;
-  background-color: rgb(29, 32, 32);
-  border: 1px solid var(--copper);
-  border-radius: 10px;
-  padding-bottom: 17px;
-  box-shadow: 2px 2px 30px rgb(17, 17, 17);
-}
-form{
-  padding-top: 10%;
-}
-input
-{  
-  display: inline-block;
-  margin-bottom: 5% !important;
-  border-radius: 5px;
-  width: 92%;
-  background-color: transparent;
-  color: var(--copper);
-  border-right: none;
-  
-}
-input:focus, textarea:focus, select:focus{
-  outline: none;
-}
-textarea
-{
-  width: 92%;
-  /* height: 50%; */
-  border-radius: 5px; 
-  background-color: transparent;
-  color: #DCDBDB;
-}
-.form-btn
-{
-  height: 45px;
-  width: 45px;
-  border-radius: 50%;
-  margin-top: 5px;
-  background-color: #FF9839;
-  
-}
-.form-btn>.fas
-{
-color: rgb(29, 32, 32);
-margin-bottom: 0;
-font-size: 22px;
-margin-left: -4px;
-}
-
-footer{
-  height: 30vh;
-  display: flex;  
-}
-
-.icon-container
-{
-height: fit-content;
-width: fit-content;
-margin: auto;
-}
-.icon-box
-{
-  display: inline-block;  
-  height: 50px;
-  width: 50px;
-  background-color: #252627;
-  border: 2px solid #247a71; 
-  overflow: hidden; 
-}
-.icon-box> a
-{
-  text-decoration: none;
-  font-size: 30px;
-  color: #247a71;
-  display: inline-block;
-  margin-left: 9px;  
-}
-
-.icon-box:hover> a
-{
-  display: inline-block;  
-  animation: backInDown; 
-  animation-duration: 300ms; 
- 
-}
-.icon-box:hover
-{  
-   background-color: #247a71;
-   color: #252627;
-}
-.icon-box:hover .fab
-{     
-  color: #DCDBDB;
-}
-.up-icon
-{  
-  margin-left: 5px;
-}
-.icon-box:hover> a .up-icon
-{
-  display: inline-block;  
-  animation: backInUp !important;
-  animation-duration: 300ms; 
-  color: #DCDBDB;
-  margin-left: 5px;
-}
-.icon-container>p{
-  margin-left: -7px;  
-  padding-top: 50px;
-  position: absolute;
-}
-.icon-container>p>span{
-color: var(--copper);
-}
-/* ================= media query===============================================================
-=============================================================================================== */
-
-
-@media only screen and (max-width: 600px) {
-  html,body{
-    overflow-x: hidden;
-  }
-  .myname {
-
-    padding-top: 60%;
-  }
-  .navbar
-  {
-    display: none;
-  }
-  .content-container {
-    flex-direction: column-reverse;
-    height: fit-content;
-  }
-
-  .content-container>.about-content-box {
-    width: 100%;
-  }
-
-  .about-me-card-container {
-    flex-direction: column;
-  }
-
-  .about-me-cards {
-    width: 100% !important;
-    margin-bottom: 10px;
-  }
-
-  .about-me-cards-title {
-    font-size: 1.2rem;
-    font-weight: 600;
-  }
-
-  .navbar-dark .navbar-toggler {
-    color: #000 !important;
-    border-color: #000;
-    margin-bottom: 5px;
-  }
-
-  .skill_section {
-    display: flex;
-    flex-wrap: wrap;
-    height: fit-content;
-    width: 100vw;
-  }
-
-  .skill-containers {
-    width: 100vh;
-    height: fit-content;
-  }
-
-  .graph-container {
-    border-bottom: 1px solid var(--copper);
-    border-left: none;
-    height: 300px;
-    margin-left: 15px;
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: flex-end;
-  }
-
-  .graph-container>.bar {
-    width: 30px;
-    background-color: #247a71;
-    color: #DCDBDB;
-    text-align: center;
-    padding-top: 20%;
-    position: relative;
-    box-shadow: 5px 5px 10px rgb(28, 29, 29);
-  }
-
-  .bar:nth-child(1) {
-    height: 90%;
-  }
-
-  .bar:nth-child(2) {
-    height: 80%;
-  }
-
-  .bar:nth-child(3) {
-    height: 50%;
-  }
-
-  .bar:nth-child(4) {
-    height: 80%;
-  }
-
-  .bar:nth-child(5) {
-    height: 60%;
-  }
-
-  .bar:nth-child(6) {
-    height: 70%;
-  }
-
-  .bar:nth-child(7) {
-    height: 40%;
-  }
-
-  .bar:nth-child(8) {
-    height: fit-content;
-    padding-top: 12%;
-  }
-
-  .fa,
-  .fab,
-  .fad,
-  .fal,
-  .far,
-  .fas {
-    display: inline !important;
-  }
-
-  .graph-container>.bar>p {
-    transform: rotate(-90deg);
-    width: fit-content;
-    display: block;
-    color: #2a2c2c;
-    font-weight: bolder;
-    /* font-size: 10px; */
-  }
-
-  .heading-for-600px {
-    font-size: 40px;
-  }
-
-  .hexagon-gallery {
-    margin: auto;
-    /* max-width: 50%; */
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-auto-rows: 100px;
-    grid-gap: 14px;
-    padding-bottom: 50px;
-  }
-  .portfolio_section {
-    height: fit-content;
-    padding-top: 5%;
-  }
-  .portfolio_section>.project-container>.project-card {
-    margin-bottom: 20px;
-  }
-
-  .Contact_section
-{
-  height: fit-content;
- display: flex;
- flex-direction: column;
- margin-bottom: 10px;
-}
-.Contact_section>.contact-container
-{
-  width: 100%;
-}
-.Contact_section> .contact-container> .contact-card
-{
-  margin-bottom: 40px;
-}
-.contact-container:nth-child(1)
-{
-  height: 300px;
-  padding: 20px;
-}
-}
+@import 'Magic.css';
